dataset1235/2025-2/2318198438/users/1084604152/executions/2445341515_2249045874.log
== RUN (2025-09-02 00:20:20)
-- CODE: 
from math import *

# faça seu código aqui!
lado_octo = float(input())

apotema = lado_octo / (2*tan(pi/8))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
4.82842712474619
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
9.65685424949238
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
6.035533905932738
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
6.035533905932738
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
10.863961030678928
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
7.242640687119286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:20:05)
-- CODE: 
from math import *

# faça seu código aqui!
lado_octo = float(input())

apotema = lado_octo / (2*math.tan(math.pi/8))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apotema = lado_octo / (2*math.tan(math.pi/8))
                             ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:21:00)
-- CODE: 
from math import *

# faça seu código aqui!
lado_octo = float(input())

apotema = lado_octo / (2*tan(pi/8))

area = 4 * lado_octo * apotema

print(f"{round(area,2)}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:20:56)
-- CODE: 
from math import *

# faça seu código aqui!
lado_octo = float(input())

apotema = lado_octo / (2*tan(pi/8))

area = 4 * lado_octo * apotema

print(f"{round(area,2)}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
173.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
